# MahjongEngine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  build.gradle.kts  settings.gradle.kts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ensure-labels.yml  release.yml  test.yml
config/: detekt.yml
docs/: amitaro-usage-report.ja.md  architecture-review.zh-CN.md  gb-live-checklist.zh-CN.md  gb-mahjong-jni.md  gb-mahjong-plan.md  gb-mahjong-rules.md  performance-testing.md  riichi-round-flow.md  sichuan-reference-notes.zh-CN.md  wiki.zh-CN.md
docs/blockbench/: seat_chair.bbmodel  table_visual.bbmodel
gradle/wrapper/: gradle-wrapper.properties
native/gbmahjong/: CMakeLists.txt
native/gbmahjong/src/: gbmahjong_jni.cpp
resourcepack/: ATTRIBUTION.md  pack.mcmeta
resourcepack/assets/mahjong/sounds/: sounds.json
resourcepack/assets/mahjongcraft/: sounds.json
resourcepack/assets/mahjongcraft/items/: seat_chair.json
src/main/config-template/: config.template.yml  config_comments_en.properties  config_comments_zh_CN.properties  config_comments_zh_TW.properties
src/main/resources/: config.yml  config_zh_CN.yml  config_zh_TW.yml  messages.properties  messages_zh_CN.properties  messages_zh_HK.properties  messages_zh_MO.properties  messages_zh_TW.properties  paper-plugin.yml  plugin.yml
src/main/resources/language/: messages.properties  (+4 more)
(+461 files in other folders)
